--- a/main.bib
+++ b/main.bib
@@ -31,3 +31,19 @@
   note = {Accessed: 2023-12-14},
   url = {https://developer.arm.com/documentation/102925/latest/}
 }
+
+@inproceedings{lehmann2020everything,
+  title={Everything old is new again: Binary security of {WebAssembly}},
+  author={Lehmann, Daniel and Kinder, Johannes and Pradel, Michael},
+  booktitle={29th USENIX Security Symposium (USENIX Security 20)},
+  pages={217--234},
+  year={2020}
+}
+
+@MISC{CVE-2023-4863,
+  title = {{CVE}-2023-4863},
+  howpublished = "Available from NIST National Vulnerability Database, {CVE-ID} {CVE}-2023-4863.",
+  year = {2023},
+  url={https://nvd.nist.gov/vuln/detail/CVE-2023-4863},
+  urldate={19 April 2015}
+}
