--- a/settings.tex
+++ b/settings.tex
@@ -7,13 +7,13 @@
 \usepackage[autostyle]{csquotes}
 \usepackage[%
   backend=biber,
-  url=false,
-  style=alphabetic,
+  url=true,
+  style=numeric,
   maxnames=4,
   minnames=3,
   maxbibnames=99,
   giveninits,
-  uniquename=init]{biblatex} % TODO: adapt citation style
+  uniquename=init]{biblatex}
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
