background, memory safety

--- a/main.bib
+++ b/main.bib
@@ -7,7 +7,7 @@
 }
 
 @inproceedings{serebryany2012addresssanitizer,
-  title={$\{$AddressSanitizer$\}$: A fast address sanity checker},
+  title={AddressSanitizer: A fast address sanity checker},
   author={Serebryany, Konstantin and Bruening, Derek and Potapenko, Alexander and Vyukov, Dmitriy},
   booktitle={2012 USENIX annual technical conference (USENIX ATC 12)},
   pages={309--318},
@@ -46,4 +46,46 @@
   year = {2023},
   url={https://nvd.nist.gov/vuln/detail/CVE-2023-4863},
   urldate={19 April 2015}
+}
+
+@inproceedings{szekeres2013sok,
+  title={Sok: Eternal war in memory},
+  author={Szekeres, Laszlo and Payer, Mathias and Wei, Tao and Song, Dawn},
+  booktitle={2013 IEEE Symposium on Security and Privacy},
+  pages={48--62},
+  year={2013},
+  organization={IEEE}
+}
+
+@misc{chromium_memory_safety,
+  title = {Memory Safety},
+  url = {https://www.chromium.org/Home/chromium-security/memory-safety/},
+  urldate = {2024-03-14},
+  publisher = {The Chromium Project},
+  note = {Accessed on March 14, 2024}
+}
+
+@misc{microsoft_memory_safety,
+  title = {A proactive approach to more secure code},
+  url = {https://msrc.microsoft.com/blog/2019/07/a-proactive-approach-to-more-secure-code/},
+  urldate = {2019-07-16},
+  author = {Thomas, Gavin},
+  publisher = {MSRC, Microsoft},
+  note = {Accessed on March 14, 2024}
+}
+
+@misc{android_memory_safety,
+  title = {Queue the Hardening Enhancements},
+  url = {https://security.googleblog.com/2019/05/queue-hardening-enhancements.html},
+  author = {Vander Stoep, Jeff and Zhang, Chong},
+  urldate = {2019-05-09},
+  publisher = {Adnroid Security & Privacy Team},
+  note = {Accessed on March 14, 2024}
+}
+
+@article{serebryany2023gwp,
+  title={GWP-ASan: Sampling-Based Detection of Memory-Safety Bugs in Production},
+  author={Serebryany, Kostya and Kennelly, Chris and Phillips, Mitch and Denton, Matt and Elver, Marco and Potapenko, Alexander and Morehouse, Matt and Tsyrklevich, Vlad and Holler, Christian and Lettner, Julian and others},
+  journal={arXiv preprint arXiv:2311.09394},
+  year={2023}
 }
