--- a/main.tex
+++ b/main.tex
@@ -65,6 +65,7 @@
 	\acro{MTE}[MTE]{Memory Tagging Extension}
 	\acro{PAC}[PAC]{Pointer Authentication}
 	\acro{IR}[IR]{intermediate representation}
+	\acro{ASAN}[ASAN]{Address Sanitizer}
 \end{acronym}
 
 \listoffigures{}
