--- a/main.bib
+++ b/main.bib
@@ -89,3 +89,23 @@
   journal={arXiv preprint arXiv:2311.09394},
   year={2023}
 }
+
+@article{kocher2020spectre,
+  title={Spectre attacks: Exploiting speculative execution},
+  author={Kocher, Paul and Horn, Jann and Fogh, Anders and Genkin, Daniel and Gruss, Daniel and Haas, Werner and Hamburg, Mike and Lipp, Moritz and Mangard, Stefan and Prescher, Thomas and others},
+  journal={Communications of the ACM},
+  volume={63},
+  number={7},
+  pages={93--101},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{lattner2004llvm,
+  title={LLVM: A compilation framework for lifelong program analysis \& transformation},
+  author={Lattner, Chris and Adve, Vikram},
+  booktitle={International symposium on code generation and optimization, 2004. CGO 2004.},
+  pages={75--86},
+  year={2004},
+  organization={IEEE}
+}
