--- a/settings.tex
+++ b/settings.tex
@@ -36,6 +36,8 @@
 \usepackage{ifthen}
 \usepackage{background}
 \usepackage[hhmmss]{datetime}
+\usepackage{amsmath}
+\usepackage{bussproofs}
 
 % for fachschaft_print.pdf
 \makeatletter
