--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,8 @@
 %\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
 \documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook}
 \usepackage{textcomp}
-\usepackage{mathtools} % one-sided
+\usepackage{mathtools}
+\usepackage{wasysym} % one-sided
 
 % TODO: change citation style in settings
 \input{settings}
@@ -68,6 +69,8 @@
 	\acro{IR}[IR]{intermediate representation}
 	\acro{ASAN}[ASAN]{Address Sanitizer}
 	\acro{GEP}[GEP]{\texttt{getelementptr}}
+	\acro{WASI}[WASI]{WebAssembly System Interface}
+	\acro{CLIF}[CLIF]{Cranelift IR}
 \end{acronym}
 
 \listoffigures{}
