--- a/main.bib
+++ b/main.bib
@@ -32,6 +32,14 @@
   url = {https://developer.arm.com/documentation/102925/latest/}
 }
 
+@techreport{ARMA2024Arch64,
+  title = {Arm Architecture Reference Manual for A-profile architecture},
+  author = {{ARM Ltd.}},
+  type = {{White Paper}},
+  note = {Accessed: 2024-03-21},
+  url = {https://developer.arm.com/documentation/ddi0487/latest/}
+}
+
 @inproceedings{lehmann2020everything,
   title={Everything old is new again: Binary security of {WebAssembly}},
   author={Lehmann, Daniel and Kinder, Johannes and Pradel, Michael},
