--- a/settings.tex
+++ b/settings.tex
@@ -19,6 +19,7 @@
 \usepackage{listings}
 \usepackage{lstautogobble}
 \usepackage{tikz}
+\usepackage{pgf}
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
 \usepackage{booktabs}
@@ -134,3 +135,6 @@
 
 \usepackage{cleveref}
 \usepackage{algpseudocode}
+
+% for the pgf plots by mpl
+\def\mathdefault#1{#1}
