--- a/defs.tex
+++ b/defs.tex
@@ -1,7 +1,7 @@
 \newcommand{\todo}[1]{\textcolor{red}{TODO: [#1]}}
 \newcommand{\mfcomment}[1]{\textcolor{blue}{MF: [#1]}}
 
-\newcommand{\projectname}[0]{\textsc{SafeWasm}}
+%\newcommand{\projectname}[0]{\textsc{SafeWasm}}
 
 \usepackage{colortbl}
 %\usepackage{pifont}% http://ctan.org/pkg/pifont
@@ -30,7 +30,7 @@
     escapechar=|,
     captionpos=b,
     language=c,
-    keywords={size_t, void, for, int, struct, return, long}
+    keywords={size_t, void, for, int, struct, return, long, char}
 }
 
 \lstdefinelanguage{wasm}{
