--- a/main.bib
+++ b/main.bib
@@ -53,7 +53,7 @@
   howpublished = "Available from NIST National Vulnerability Database, {CVE-ID} {CVE}-2023-4863.",
   year = {2023},
   url={https://nvd.nist.gov/vuln/detail/CVE-2023-4863},
-  urldate={19 April 2015}
+  urldate={2015-04-19}
 }
 
 @inproceedings{szekeres2013sok,
@@ -116,4 +116,22 @@
   pages={75--86},
   year={2004},
   organization={IEEE}
+}
+
+@article{nethercote2007valgrind,
+  title={Valgrind: a framework for heavyweight dynamic binary instrumentation},
+  author={Nethercote, Nicholas and Seward, Julian},
+  journal={ACM Sigplan notices},
+  volume={42},
+  number={6},
+  pages={89--100},
+  year={2007},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{serebryany2018memory,
+  title={Memory Tagging and how it improves C/C++ memory safety},
+  author={Serebryany, Kostya and Stepanov, Evgenii and Shlyapnikov, Aleksey and Tsyrklevich, Vlad and Vyukov, Dmitry},
+  journal={arXiv preprint arXiv:1802.09517},
+  year={2018}
 }
