--- a/main.tex
+++ b/main.tex
@@ -71,6 +71,8 @@
 	\acro{GEP}[GEP]{\texttt{getelementptr}}
 	\acro{WASI}[WASI]{WebAssembly System Interface}
 	\acro{CLIF}[CLIF]{Cranelift IR}
+	\acro{MMU}[MMU]{Memory Management Unit}
+	\acro{ROP}[ROP]{return-oriented programming}
 \end{acronym}
 
 \listoffigures{}
