--- a/main.bib
+++ b/main.bib
@@ -135,3 +135,10 @@
   journal={arXiv preprint arXiv:1802.09517},
   year={2018}
 }
+
+@misc{polybenchc,
+  title = {Polybench: The polyhedral benchmark suite},
+  author = {Pouchet, Louis-Noel},
+  url = {https://web.cs.ucla.edu/~pouchet/software/polybench/},
+  note = {Accessed: 2024-03-25}
+}
