--- a/main.bib
+++ b/main.bib
@@ -142,3 +142,14 @@
   url = {https://web.cs.ucla.edu/~pouchet/software/polybench/},
   note = {Accessed: 2024-03-25}
 }
+
+@article{woodruff2014cheri,
+  title={The CHERI capability model: Revisiting RISC in an age of risk},
+  author={Woodruff, Jonathan and Watson, Robert NM and Chisnall, David and Moore, Simon W and Anderson, Jonathan and Davis, Brooks and Laurie, Ben and Neumann, Peter G and Norton, Robert and Roe, Michael},
+  journal={ACM SIGARCH Computer Architecture News},
+  volume={42},
+  number={3},
+  pages={457--468},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
