--- a/main.tex
+++ b/main.tex
@@ -73,6 +73,8 @@
 	\acro{CLIF}[CLIF]{Cranelift IR}
 	\acro{MMU}[MMU]{Memory Management Unit}
 	\acro{ROP}[ROP]{return-oriented programming}
+	\acro{CHERI}[CHERI]{Capability Hardware Enhanced RISC Instructions}
+	\acro{HWASAN}[HWASAN]{Hardware-Assisted Address Sanitizer}
 \end{acronym}
 
 \listoffigures{}
