--- a/defs.tex
+++ b/defs.tex
@@ -83,9 +83,10 @@
         fptrunc, fpext, fptoui, fptosi, uitofp, sitofp,
         ptrtoint, inttoptr, bitcast,
         ret, br, indirectbr, switch, invoke, unwind, unreachable,
-        malloc, alloca, free, load, store, getelementptr,
+        alloca, load, store, getelementptr,
         extractelement, insertelement, shufflevector,
         extractvalue, insertvalue,
+        void, ptr, i8, i16, i32, i64, i128, double, float
     },
     alsoletter={\%},
     keywordsprefix={\%},
