--- a/main.bib
+++ b/main.bib
@@ -153,3 +153,11 @@
   year={2014},
   publisher={ACM New York, NY, USA}
 }
+
+@thesis{rehde2023wasm,
+  author = {Rehde, Fritz},
+  title = {Hardware-Assisted Memory Safety for WebAssembly},
+  type = {bathesis},
+  institution = {Technical University of Munich},
+  date = {2023},
+}
