--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,7 @@
 	\acro{ROP}[ROP]{return-oriented programming}
 	\acro{CHERI}[CHERI]{Capability Hardware Enhanced RISC Instructions}
 	\acro{HWASAN}[HWASAN]{Hardware-Assisted Address Sanitizer}
+	\acro{TBI}[TBI]{Top Byte Ignore}
 \end{acronym}
 
 \listoffigures{}
