--- a/main.bib
+++ b/main.bib
@@ -161,3 +161,22 @@
   institution = {Technical University of Munich},
   date = {2023},
 }
+
+@article{michael2023mswasm,
+  title={Mswasm: Soundly enforcing memory-safe execution of unsafe code},
+  author={Michael, Alexandra E and Gollamudi, Anitha and Bosamiya, Jay and Johnson, Evan and Denlinger, Aidan and Disselkoen, Craig and Watt, Conrad and Parno, Bryan and Patrignani, Marco and Vassena, Marco and others},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={7},
+  number={POPL},
+  pages={425--454},
+  year={2023},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{disselkoen2019position,
+  title={Position paper: Progressive memory safety for webassembly},
+  author={Disselkoen, Craig and Renner, John and Watt, Conrad and Garfinkel, Tal and Levy, Amit and Stefan, Deian},
+  booktitle={Proceedings of the 8th International Workshop on Hardware and Architectural Support for Security and Privacy},
+  pages={1--8},
+  year={2019}
+}
