--- a/main.tex
+++ b/main.tex
@@ -76,6 +76,7 @@
 	\acro{CHERI}[CHERI]{Capability Hardware Enhanced RISC Instructions}
 	\acro{HWASAN}[HWASAN]{Hardware-Assisted Address Sanitizer}
 	\acro{TBI}[TBI]{Top Byte Ignore}
+	\acro{rss}[rss]{resident set size}
 \end{acronym}
 
 \listoffigures{}
