--- a/main.bib
+++ b/main.bib
@@ -73,6 +73,14 @@
   note = {Accessed on March 14, 2024}
 }
 
+@misc{mte_as_implemented,
+  title = {MTE as Implemented},
+  url = {https://googleprojectzero.blogspot.com/2023/08/mte-as-implemented-part-1.html},
+  urldate = {2023-08-02},
+  publisher = {Brand, Mark},
+  note = {Accessed on March 27, 2024}
+}
+
 @misc{microsoft_memory_safety,
   title = {A proactive approach to more secure code},
   url = {https://msrc.microsoft.com/blog/2019/07/a-proactive-approach-to-more-secure-code/},
