--- a/main.bib
+++ b/main.bib
@@ -188,3 +188,11 @@
   pages={1--8},
   year={2019}
 }
+
+@article{paraskevopoulou2024richwasm,
+  title={RichWasm: Bringing Safe, Fine-Grained, Shared-Memory Interoperability Down to WebAssembly},
+  author={Paraskevopoulou, Zoe and Fitzgibbons, Michael and Thalakottur, Michelle and Mushtak, Noble and Mazur, Jose Sulaiman and Ahmed, Amal},
+  journal={arXiv preprint arXiv:2401.08287},
+  year={2024}
+}
+
