--- a/main.bib
+++ b/main.bib
@@ -15,7 +15,7 @@
 }
 
 @techreport{Qualcomm2017PointerAuth,
-  title = {Pointer Authentication on ARMv8.3: Design and Analysis of the New Software Security Instructions},
+  title = {Pointer Authentication on ArmV8.3: Design and Analysis of the New Software Security Instructions},
   author = {{Qualcomm Technologies, Inc.}},
   year = {2017},
   type = {{White Paper}},
@@ -24,7 +24,7 @@
 }
 
 @techreport{ARM2019MTE,
-  title = {Armv8.5-A Memory Tagging Extension},
+  title = {ArmV8.5-A Memory Tagging Extension},
   author = {{ARM Ltd.}},
   year = {2019},
   type = {{White Paper}},
