--- a/defs.tex
+++ b/defs.tex
@@ -20,6 +20,7 @@
     numberstyle=\tiny\color{codegray},
     stringstyle=\color{codepurple},
     basicstyle=\ttfamily\footnotesize,
+    showstringspaces=false,
     breaklines,
     tabsize=2,
     numbers=left,
@@ -30,7 +31,6 @@
     escapechar=|,
     captionpos=b,
     language=c,
-    keywords={size_t, void, for, int, struct, return, long, char}
 }
 
 \lstdefinelanguage{wasm}{
