--- a/main.tex
+++ b/main.tex
@@ -65,14 +65,14 @@
 	\acro{MTE}[MTE]{Memory Tagging Extension}
 	\acro{PAC}[PAC]{Pointer Authentication}
 	\acro{IR}[IR]{intermediate representation}
-	\acro{ASAN}[ASAN]{Address Sanitizer}
+	\acro{ASAN}[ASan]{Address Sanitizer}
 	\acro{GEP}[GEP]{\texttt{getelementptr}}
 	\acro{WASI}[WASI]{WebAssembly System Interface}
 	\acro{CLIF}[CLIF]{Cranelift IR}
 	\acro{MMU}[MMU]{Memory Management Unit}
 	\acro{ROP}[ROP]{return-oriented programming}
 	\acro{CHERI}[CHERI]{Capability Hardware Enhanced RISC Instructions}
-	\acro{HWASAN}[HWASAN]{Hardware-Assisted Address Sanitizer}
+	\acro{HWASAN}[HWASan]{Hardware-Assisted Address Sanitizer}
 	\acro{TBI}[TBI]{Top Byte Ignore}
 	\acro{rss}[rss]{resident set size}
 \end{acronym}
