--- a/main.bib
+++ b/main.bib
@@ -196,3 +196,45 @@
   year={2024}
 }
 
+@inproceedings{szewczyk2022leaps,
+  title={Leaps and bounds: Analyzing WebAssembly’s performance with a focus on bounds checking},
+  author={Szewczyk, Raven and Stonehouse, Kimberley and Barbalace, Antonio and Spink, Tom},
+  booktitle={2022 IEEE International Symposium on Workload Characterization (IISWC)},
+  pages={256--268},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{musch2019new,
+  title={New Kid on the Web: A Study on the Prevalence of WebAssembly in the Wild},
+  author={Musch, Marius and Wressnegger, Christian and Johns, Martin and Rieck, Konrad},
+  booktitle={Detection of Intrusions and Malware, and Vulnerability Assessment: 16th International Conference, DIMVA 2019, Gothenburg, Sweden, June 19--20, 2019, Proceedings 16},
+  pages={23--42},
+  year={2019},
+  organization={Springer}
+}
+
+@misc{wasm_use_cases,
+  title = {WebAssembly Use Cases},
+  url = {https://webassembly.org/docs/use-cases/},
+  note = {Accessed on March 28, 2024}
+}
+
+@misc{scudo_allocator,
+  title = {Scudo Hardened Allocator},
+  url = {https://llvm.org/docs/ScudoHardenedAllocator.html},
+  note = {Accessed on March 28, 2024}
+}
+
+@misc{chrome_partition_alloc,
+  title = {Chromium PartitionAlloc},
+  url = {https://chromium.googlesource.com/chromium/src/+/master/base/allocator/partition_allocator/},
+  note = {Accessed on March 28, 2024}
+}
+
+@misc{glibc_ptmalloc,
+  title = {glibc ptmalloc},
+  url = {https://ftp.gnu.org/gnu/glibc/},
+  note = {Accessed on March 28, 2024}
+}
+
