--- a/main.bib
+++ b/main.bib
@@ -238,3 +238,24 @@
   note = {Accessed on March 28, 2024}
 }
 
+@TechReport{UCAM-CL-TR-982,
+  author =	 {Watson, Robert N. M. and Barnes, Graeme and Clarke, Jessica
+          	  and Grisenthwaite, Richard and Sewell, Peter and Moore,
+          	  Simon W. and Woodruff, Jonathan},
+  title = 	 {{Arm Morello Programme: Architectural security goals and
+         	   known limitations}},
+  year = 	 2023,
+  month = 	 jul,
+  url = 	 {https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-982.pdf},
+  institution =  {University of Cambridge, Computer Laboratory},
+  doi = 	 {10.48456/tr-982},
+  number = 	 {UCAM-CL-TR-982}
+}
+
+@inproceedings{xia2019cherivoke,
+  title={Cherivoke: Characterising pointer revocation using cheri capabilities for temporal memory safety},
+  author={Xia, Hongyan and Woodruff, Jonathan and Ainsworth, Sam and Filardo, Nathaniel W and Roe, Michael and Richardson, Alexander and Rugg, Peter and Neumann, Peter G and Moore, Simon W and Watson, Robert NM and others},
+  booktitle={Proceedings of the 52nd Annual IEEE/ACM International Symposium on Microarchitecture},
+  pages={545--557},
+  year={2019}
+}
