typing rules/small step reduction

--- a/main.bib
+++ b/main.bib
@@ -259,3 +259,17 @@
   pages={545--557},
   year={2019}
 }
+
+@book{pierce2002types,
+  title={Types and programming languages},
+  author={Pierce, Benjamin C},
+  year={2002},
+  publisher={MIT press}
+}
+
+@article{plotkin1981structural,
+  title={A structural approach to operational semantics},
+  author={Plotkin, Gordon D},
+  year={1981},
+  publisher={Aarhus university}
+}
