--- a/main.bib
+++ b/main.bib
@@ -273,3 +273,53 @@
   year={1981},
   publisher={Aarhus university}
 }
+
+@inproceedings{necula2002ccured,
+  title={CCured: Type-safe retrofitting of legacy code},
+  author={Necula, George C and McPeak, Scott and Weimer, Westley},
+  booktitle={Proceedings of the 29th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+  pages={128--139},
+  year={2002}
+}
+
+@inproceedings{jim2002cyclone,
+  title={Cyclone: a safe dialect of C.},
+  author={Jim, Trevor and Morrisett, J Gregory and Grossman, Dan and Hicks, Michael W and Cheney, James and Wang, Yanling},
+  booktitle={USENIX Annual Technical Conference, General Track},
+  pages={275--288},
+  year={2002}
+}
+
+@inproceedings{nagarakatte2009softbound,
+  title={SoftBound: Highly compatible and complete spatial memory safety for C},
+  author={Nagarakatte, Santosh and Zhao, Jianzhou and Martin, Milo MK and Zdancewic, Steve},
+  booktitle={Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages={245--258},
+  year={2009}
+}
+
+@inproceedings{akritidis2009baggy,
+  title={Baggy Bounds Checking: An Efficient and Backwards-Compatible Defense against Out-of-Bounds Errors.},
+  author={Akritidis, Periklis and Costa, Manuel and Castro, Miguel and Hand, Steven},
+  booktitle={USENIX Security Symposium},
+  volume={10},
+  pages={96},
+  year={2009}
+}
+
+@inproceedings{akritidis2010cling,
+  title={Cling: A memory allocator to mitigate dangling pointers},
+  author={Akritidis, Periklis and others},
+  booktitle={19th USENIX Security Symposium (USENIX Security 10)},
+  year={2010}
+}
+
+
+@article{watson_cheri_2020,
+  title = {{CHERI} {C}/{C}++ {Programming} {Guide}},
+  language = {en},
+  author = {Watson, Robert N M and Richardson, Alexander and Davis, Brooks and Baldwin, John and Chisnall, David and Clarke, Jessica and Filardo, Nathaniel and Moore, Simon W and Napierala, Edward and Sewell, Peter and Neumann, Peter G},
+  year = {2020},
+  month = {June},
+}
+
