--- a/settings.tex
+++ b/settings.tex
@@ -141,3 +141,9 @@
 
 \usepackage{xfrac}
 \usepackage{multirow}
+
+\usepackage{float}
+\newfloat{lstfloat}{htbp}{lop}
+\floatname{lstfloat}{Listing}
+\crefname{lstfloat}{listing}{listings}
+\Crefname{lstfloat}{Listing}{Listings}
