--- a/pages/acknowledgments.tex
+++ b/pages/acknowledgments.tex
@@ -9,6 +9,22 @@
 
 \vspace{10mm}
 
-%TODO: Acknowledgments
+First and foremost, I would like to thank my supervisor, Pramod Bhatotia.
+My academic life would have been quite different without his guidance and support.
+Since writing my Bachelor's thesis in 2021, his chair has been a welcoming place, allowing me to grow personally and as a researcher while opening many doors for the future.
+
+\noindent
+I am also grateful to my advisor, Dimitrios Stavrakakis, for answering my questions about memory safety, giving me feedback on my work, and helping me debug weird measurements.
+
+
+To my friends, who have been with me throughout my master's thesis and beyond in both academic and personal journeys:
+Thank you for making this time enjoyable.
+While I cannot name everyone here, I want to extend special thanks to Andreas and Christoph for their feedback on this thesis.
+
+During my last semester break, I had the opportunity to do an internship at Huawei's Helsinki System Security Lab.
+I gained extensive knowledge in compilers, WebAssembly, and security, greatly enhanced by the collaboration with my colleagues Antti, Janne, Carlos, Rémi, Valentin, and my manager, Jan-Erik, despite our short time sharing the office.
+
+Lastly, I'd like to thank my family.
+Their support enabled me to study in Munich, and I am forever thankful for the unconditional support they have provided me.
 
 \cleardoublepage{}
