--- a/main.tex
+++ b/main.tex
@@ -63,20 +63,21 @@
     \addchap{Abbreviations}
     \begin{acronym}
         \itemsep-.25\baselineskip
-        \acro{WASM}[WASM]{WebAssembly}
+        \acro{ASAN}[ASan]{Address Sanitizer}
+        \acro{CHERI}[CHERI]{Capability Hardware Enhanced RISC Instructions}
+        \acro{CLIF}[CLIF]{Cranelift IR}
+        \acro{GEP}[GEP]{\texttt{getelementptr}}
+        \acro{HWASAN}[HWASan]{Hardware-Assisted Address Sanitizer}
+        \acro{IR}[IR]{intermediate representation}
+        \acro{ISA}[ISA]{instruction set architecture}
+        \acro{MMU}[MMU]{Memory Management Unit}
         \acro{MTE}[MTE]{Memory Tagging Extension}
         \acro{PAC}[PAC]{Pointer Authentication}
-        \acro{IR}[IR]{intermediate representation}
-        \acro{ASAN}[ASan]{Address Sanitizer}
-        \acro{GEP}[GEP]{\texttt{getelementptr}}
-        \acro{WASI}[WASI]{WebAssembly System Interface}
-        \acro{CLIF}[CLIF]{Cranelift IR}
-        \acro{MMU}[MMU]{Memory Management Unit}
         \acro{ROP}[ROP]{return-oriented programming}
-        \acro{CHERI}[CHERI]{Capability Hardware Enhanced RISC Instructions}
-        \acro{HWASAN}[HWASan]{Hardware-Assisted Address Sanitizer}
-        \acro{TBI}[TBI]{Top Byte Ignore}
         \acro{rss}[rss]{resident set size}
+        \acro{TBI}[TBI]{Top Byte Ignore}
+        \acro{WASI}[WASI]{WebAssembly System Interface}
+        \acro{WASM}[WASM]{WebAssembly}
     \end{acronym}
 
     \listoffigures{}
