--- a/main.bib
+++ b/main.bib
@@ -323,3 +323,10 @@
   month = {June},
 }
 
+@inproceedings{bozdougan2022safepm,
+  title={SafePM: A sanitizer for persistent memory},
+  author={Bozdo{\u{g}}an, Kartal Kaan and Stavrakakis, Dimitrios and Issa, Shady and Bhatotia, Pramod},
+  booktitle={Proceedings of the Seventeenth European Conference on Computer Systems},
+  pages={506--524},
+  year={2022}
+}
