--- a/pages/acknowledgments.tex
+++ b/pages/acknowledgments.tex
@@ -14,7 +14,8 @@ My academic life would have been quite different without his guidance and suppor
 Since writing my Bachelor's thesis in 2021, his chair has been a welcoming place, allowing me to grow personally and as a researcher while opening many doors for the future.
 
 \noindent
-I am also grateful to my advisor, Dimitrios Stavrakakis, for answering my questions about memory safety, giving me feedback on my work, and helping me debug weird measurements.
+I am also very grateful to my advisor, Dimitrios Stavrakakis, for answering my questions about memory safety, giving me feedback on my work, and helping me debug weird measurements.
+Thanks to Dennis Sprokholt for his feedback on my formalizations.
 
 
 To my friends, who have been with me throughout my master's thesis and beyond in both academic and personal journeys:
